<?xml version="1.0" encoding="utf-8"?>
<!--LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="0dp"
	android:orientation="vertical"
	android:layout_weight="1"
	android:gravity="center"-->
	
<merge 
	xmlns:android="http://schemas.android.com/apk/res/android">
    
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:orientation="horizontal"
		android:gravity="center"
		android:layout_weight="1"
		android:onClick="keyHandler" 
		android:clickable="true">

		<Button
			android:id="@+id/b_q"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_q" />

		<Button
			android:id="@+id/b_w"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_w" />

		<Button
			android:id="@+id/b_e"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_e" />

		<Button
			android:id="@+id/b_r"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_r" />

		<Button
			android:id="@+id/b_t"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_t" />

		<Button
			android:id="@+id/b_y"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_y" />

		<Button
			android:id="@+id/b_u"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_u" />

		<Button
			android:id="@+id/b_i"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_i" />

		<Button
			android:id="@+id/b_o"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_o" />

		<Button
			android:id="@+id/b_p"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_p" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:orientation="horizontal"
		android:gravity="center"
		android:layout_weight="1">
		
		<Space
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="0.5" />
		
		<Button
			android:id="@+id/b_a"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_a" />

		<Button
			android:id="@+id/b_s"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_s" />

		<Button
			android:id="@+id/b_d"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_d" />

		<Button
			android:id="@+id/b_f"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_f" />

		<Button
			android:id="@+id/b_g"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_g" />

		<Button
			android:id="@+id/b_h"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_h" />

		<Button
			android:id="@+id/b_j"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_j" />

		<Button
			android:id="@+id/b_k"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_k" />

		<Button
			android:id="@+id/b_l"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_l" />
		
		<Space
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="0.5" />
		
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:orientation="horizontal"
		android:gravity="center"
		android:layout_weight="1">
		
		<Button
			android:id="@+id/b_shift"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1.5"
			android:text="@string/b_shift"
			style="@style/ControlKeys" />

		<Button
			android:id="@+id/b_z"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_z" />

		<Button
			android:id="@+id/b_x"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_x" />

		<Button
			android:id="@+id/b_c"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_c" />

		<Button
			android:id="@+id/b_v"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_v" />

		<Button
			android:id="@+id/b_b"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_b" />

		<Button
			android:id="@+id/b_n"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_n" />

		<Button
			android:id="@+id/b_m"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:text="@string/b_m" />
		
		<Button
			android:id="@+id/b_backspace"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1.5"
			android:text="@string/b_backspace"
			style="@style/ControlKeys" />

	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:gravity="center"
		android:orientation="horizontal"
		android:layout_weight="1">
		
		<Button
			android:id="@+id/b_symbols"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1.5"
			android:text="@string/b_symbols" 
			style="@style/ControlKeys" />
		
		<Button
			android:id="@+id/b_space"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="7"
			android:text="@string/b_space"
			style="@style/ControlKeys" />
		
		<Button
			android:id="@+id/b_return"
			android:layout_height="fill_parent"
			android:layout_width="0dp"
			android:layout_weight="1.5"
			android:text="@string/b_return"
			style="@style/ControlKeys" />
		
	</LinearLayout>
	
</merge>
